--- a/KinectWpfApplication/KinectWpfApplication/MainWindow.xaml
+++ b/KinectWpfApplication/KinectWpfApplication/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KinectWpfApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kinect WPF Application" Height="350" Width="525" VerticalContentAlignment="Center" Loaded="Window_Loaded" Closed="Window_Closed" WindowStartupLocation="CenterScreen">
+        Title="Kinect WPF Application" Height="350" Width="525" VerticalContentAlignment="Center" Loaded="Window_Loaded" Closed="Window_Closed" WindowStartupLocation="CenterScreen" Icon="sp00k (green).ico" MinHeight="300" MinWidth="365">
     <Grid>
         <Image Name="imageRgb" Stretch="Uniform"/>
         <Image Name="imageDepth" Stretch="Uniform" Opacity="0.5"/>
