--- a/StandAloneComplex/StandAloneComplex/MainWindow.xaml
+++ b/StandAloneComplex/StandAloneComplex/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="StandAloneComplex.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="STAND ALONE COMPLEX" Height="350" Width="525" VerticalContentAlignment="Center" Loaded="Window_Loaded" Closed="Window_Closed" WindowStartupLocation="CenterScreen" Icon="sp00k (blue).ico" MinHeight="300" MinWidth="365">
+        Title="STAND ALONE COMPLEX" Height="350" Width="525" VerticalContentAlignment="Center" Loaded="Window_Loaded" Closed="Window_Closed"
+        WindowStartupLocation="CenterScreen" Icon="sp00k (blue).ico" MinHeight="300" MinWidth="365">
     <Grid>
         <Image Name="imageRgb" Stretch="Uniform"/>
         <Image Name="imageDepth" Stretch="Uniform" Opacity="0.5"/>
